# cargo-promote

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  promote.toml  rustqual.toml
.claude/skills/promote/: SKILL.md
.ctx/: GODMODE.session.json  GODMODE.trace.jsonl  HANDOFF.cargo-promote.cargo-promote.state.yaml  HANDOFF.cargo-promote.cargo-promote.yaml  conformance-spec.md
.github/workflows/: ci.yml
docs/: ideas.md
docs/plans/: 2026-05-31-branch-promotion-pipeline.md  2026-05-31-solid-refactor-impl.md  2026-05-31-solid-refactor.md
src/: cli.rs  lib.rs  main.rs
src/config/: mod.rs
src/domain/: deferral.rs  local_manifest.rs  mod.rs  promote_lock.rs  version.rs
src/domain/depgraph/: mod.rs
src/domain/manifest/: mod.rs
src/domain/pipeline/: mod.rs
src/domain/traits/: mod.rs
src/infra/: deferral.rs  mod.rs  notify.rs  rail.rs  registry_cache.rs  token.rs
src/infra/cargo/: mod.rs
src/infra/git/: mod.rs
src/infra/git/gitea/: forge.rs  mod.rs
src/infra/git/github/: mod.rs
src/infra/git/local/: mod.rs
tests/: regression.rs
tests/conformance/: config.rs  mod.rs  notifier.rs  pipeline_engine.rs  pipeline_runner.rs  publisher.rs  registry_query.rs
