[package]
name = "cargo-promote"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["Joseph O'Brien"]
license = "MIT OR Apache-2.0"
description = "Publish crates to minibox registry and promote to crates.io"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
semver = "1"
sha2 = "0.10"
thiserror = "2"
toml = "0.8"
toml_edit = "0.22"

[dev-dependencies]
tempfile = "3.0"
